// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ControlPanel > 일반 상태 스냅샷과 일치한다 1`] = `
<div>
  <div
    class="panel"
  >
    <h2
      class="title"
    >
      실험 제어
    </h2>
    <div
      class="control"
    >
      <label
        class="label"
        for="temperature"
      >
        온도 (K)
      </label>
      <input
        class="slider"
        id="temperature"
        max="400"
        min="0"
        step="1"
        type="range"
        value="300"
      />
      <span
        class="value"
      >
        300
         K
      </span>
    </div>
    <div
      class="control"
    >
      <label
        class="label"
        for="magneticField"
      >
        자기장 (T)
      </label>
      <input
        class="slider"
        id="magneticField"
        max="20"
        min="0"
        step="0.1"
        type="range"
        value="5"
      />
      <span
        class="value"
      >
        5.0
         T
      </span>
    </div>
    <div
      class="info"
    >
      <h3
        class="infoTitle"
      >
        상태 정보
      </h3>
      <p
        class="infoText"
      >
        일반 상태: 온도가 임계점 이상입니다.
      </p>
    </div>
  </div>
</div>
`;

exports[`ControlPanel > 초전도 상태 스냅샷과 일치한다 1`] = `
<div>
  <div
    class="panel"
  >
    <h2
      class="title"
    >
      실험 제어
    </h2>
    <div
      class="control"
    >
      <label
        class="label"
        for="temperature"
      >
        온도 (K)
      </label>
      <input
        class="slider"
        id="temperature"
        max="400"
        min="0"
        step="1"
        type="range"
        value="50"
      />
      <span
        class="value"
      >
        50
         K
      </span>
    </div>
    <div
      class="control"
    >
      <label
        class="label"
        for="magneticField"
      >
        자기장 (T)
      </label>
      <input
        class="slider"
        id="magneticField"
        max="20"
        min="0"
        step="0.1"
        type="range"
        value="5"
      />
      <span
        class="value"
      >
        5.0
         T
      </span>
    </div>
    <div
      class="info"
    >
      <h3
        class="infoTitle"
      >
        상태 정보
      </h3>
      <p
        class="infoText"
      >
        초전도 상태: 저항이 0에 근접합니다.
      </p>
    </div>
  </div>
</div>
`;
